force-app/main/default/objects/Meeting__c/fields/Actual_Expense_Added__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expense_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actual Expense Added</label>
    <type>Checkbox</type>
</CustomField>