force-app/main/default/objects/Meeting__c/fields/Actual_Expense_Re_Approved__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expense_Re_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Actual Expense Re-Approved</label>
    <type>Checkbox</type>
</CustomField>