force-app/main/default/objects/Meeting__c/fields/Delivery_Format__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Format__c</fullName>
    <label>Delivery Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-office</fullName>
            </value>
            <value>
                <fullName>Out-of-office</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>