force-app/main/default/objects/Meeting__c/fields/Estimated_Expense_Re_Approved__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Expense_Re_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Estimated Expense Re-Approved</label>
    <type>Checkbox</type>
</CustomField>