force-app/main/default/objects/Meeting__c/fields/Final_Participants__c.field-meta.xml
<CustomField>
    <fullName>Final_Participants__c</fullName>
    <label>Final Participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>