force-app/main/default/objects/Meeting__c/fields/Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Meeting_ID__c</fullName>
    <externalId>true</externalId>
    <label>Meeting ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>