force-app/main/default/objects/Meeting__c/fields/No_Of_Organizers__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Organizers__c</fullName>
    <label>No Of Organizers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>