force-app/main/default/objects/Meeting__c/fields/No_Of_Speakers__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Speakers__c</fullName>
    <label>No Of Speakers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>