force-app/main/default/objects/Meeting__c/fields/Objectives__c.field-meta.xml
<CustomField>
    <fullName>Objectives__c</fullName>
    <label>Objectives</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>