force-app/main/default/objects/Meeting__c/fields/On_Behalf_Of_User__c.field-meta.xml
<CustomField>
    <fullName>On_Behalf_Of_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>On Behalf Of User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Meetings On Behalf Of</relationshipLabel>
    <relationshipName>Meetings_On_Behalf</relationshipName>
    <type>Lookup</type>
</CustomField>