force-app/main/default/objects/Meeting__c/fields/Organizing_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Organizing_Business_Unit__c</fullName>
    <label>Organizing Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>