force-app/main/default/objects/Meeting__c/fields/Parent_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Parent_Meeting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Meeting</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Child Meetings</relationshipLabel>
    <relationshipName>Child_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>