force-app/main/default/objects/Meeting__c/fields/Pharma_Project__c.field-meta.xml
<CustomField>
    <fullName>Pharma_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pharma Project</label>
    <referenceTo>Pharma_Project__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>