force-app/main/default/objects/Meeting__c/fields/Primary_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Primary For Meetings</relationshipLabel>
    <relationshipName>Primary_For_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>