force-app/main/default/objects/Meeting__c/fields/Primary_Topic__c.field-meta.xml
<CustomField>
    <fullName>Primary_Topic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Topic</label>
    <referenceTo>Topic__c</referenceTo>
    <relationshipLabel>Primary For Meetings</relationshipLabel>
    <relationshipName>Primary_For_Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>