force-app/main/default/objects/Meeting__c/fields/Register_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Register_By_Date__c</fullName>
    <label>Register By Date</label>
    <type>Date</type>
</CustomField>