force-app/main/default/objects/Meeting__c/fields/Start_Date_Temp__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Temp__c</fullName>
    <label>Start Date Temp</label>
    <type>DateTime</type>
</CustomField>