force-app/main/default/objects/Meeting__c/fields/StartDate_Re_Approved__c.field-meta.xml
<CustomField>
    <fullName>StartDate_Re_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Start Date Re-Approved</label>
    <type>Checkbox</type>
</CustomField>