force-app/main/default/objects/Meeting__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>PendingApproval</fullName>
                <label>Pending Approval</label>
            </value>
            <value>
                <fullName>Pending GPM Approval</fullName>
            </value>
            <value>
                <fullName>Pending NLM Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Concluded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>