force-app/main/default/objects/Meeting__c/fields/Territories__c.field-meta.xml
<CustomField>
    <fullName>Territories__c</fullName>
    <label>Territories</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>