force-app/main/default/objects/Meeting__c/fields/Total_Actual_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Attendees__c</fullName>
    <label>Total Actual Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>