force-app/main/default/objects/Meeting__c/fields/Total_Estimated_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Expenses__c</fullName>
    <label>Total Estimated Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>