force-app/main/default/objects/Meeting__c/fields/Total_Invited_Members__c.field-meta.xml
<CustomField>
    <fullName>Total_Invited_Members__c</fullName>
    <label>Total Invited Members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>