force-app/main/default/objects/Meeting__c/fields/Total_Product_Expense_Alloc_Pct__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Expense_Alloc_Pct__c</fullName>
    <label>Total Product Expense Alloc %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>