force-app/main/default/objects/Meeting__c/fields/Unique_Integration_ID__c.field-meta.xml
<CustomField>
    <fullName>Unique_Integration_ID__c</fullName>
    <externalId>true</externalId>
    <label>Unique Integration ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>