force-app/main/default/objects/Meeting__c/fields/Virtual_Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Meeting_Id__c</fullName>
    <label>Virtual Meeting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>