force-app/main/default/objects/Meeting__c/fields/Virtual_Meeting_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Meeting_Passcode__c</fullName>
    <label>Virtual Meeting Passcode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>