force-app/main/default/objects/Meeting__c/fields/Virtual_Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Meeting_URL__c</fullName>
    <label>Virtual Meeting URL</label>
    <type>Url</type>
</CustomField>