force-app/main/default/objects/Meeting__c/recordTypes/Advisory_Board.recordType-meta.xml
<RecordType>
    <fullName>Advisory_Board</fullName>
    <active>true</active>
    <label>Advisory Board</label>
</RecordType>