force-app/main/default/objects/Meeting__c/recordTypes/AV_Action.recordType-meta.xml
<RecordType>
    <fullName>AV_Action</fullName>
    <active>true</active>
    <label>AV / Action</label>
</RecordType>