force-app/main/default/objects/Meeting__c/recordTypes/National_Standalone.recordType-meta.xml
<RecordType>
    <fullName>National_Standalone</fullName>
    <active>true</active>
    <label>National Standalone</label>
</RecordType>