force-app/main/default/objects/Meeting__c/recordTypes/Promotional_Activity.recordType-meta.xml
<RecordType>
    <fullName>Promotional_Activity</fullName>
    <active>true</active>
    <label>Promotional Activity</label>
</RecordType>