force-app/main/default/objects/Meeting__c/recordTypes/Regional_Standalone.recordType-meta.xml
<RecordType>
    <fullName>Regional_Standalone</fullName>
    <active>true</active>
    <label>Regional Standalone</label>
</RecordType>