force-app/main/default/objects/Meeting__c/recordTypes/RTD.recordType-meta.xml
<RecordType>
    <fullName>RTD</fullName>
    <active>true</active>
    <label>RTD</label>
</RecordType>