force-app/main/default/objects/Meeting__c/recordTypes/Speaker_Meeting.recordType-meta.xml
<RecordType>
    <fullName>Speaker_Meeting</fullName>
    <active>true</active>
    <label>Speaker Meeting</label>
</RecordType>